--- a/About/about.html
+++ b/About/about.html
@@ -19,7 +19,7 @@
             <ul type="none">
                 <li><a href="../index.html">HOME</a></li>
                 <li><a href="#">ABOUT</a></li>
-                <li><a href="#">HELP</a></li>
+                <li><a href="../Help/help.html">HELP</a></li>
             </ul>
         </div>
         <div class="contactUs">
@@ -29,6 +29,50 @@
 
     <div class="hr">
         <hr>
+    </div>
+
+    <div class="content">
+        <div>
+            <h3>ABOUT US :</h3>
+We are passionate about trivia and challenging your knowledge through engaging quiz games. Our platform is designed to provide an enjoyable and educational experience for users of all ages. Whether you're a casual player looking for some fun or a trivia enthusiast seeking to test your expertise, our quiz games offer something for everyone.
+
+        </div>
+        <div>
+            <h3>OUR MISSION :</h3>
+At our Quiz Game Website, our mission is to entertain and educate users through interactive quiz games. We believe that learning can be both enjoyable and rewarding. Our quizzes cover a wide range of topics, including history, science, pop culture, sports, and more. We strive to create a stimulating environment that encourages curiosity and continuous learning.
+
+        </div>
+        <div>
+            <h3>FEATURES :</h3>
+<ul>
+    <li>
+        Extensive Quiz Library: Explore our vast collection of quizzes covering various subjects. From general knowledge to niche categories, there's always something new to discover.
+    </li>
+    <li>
+        Multiple Difficulty Levels: Choose from different difficulty levels to suit your preference and challenge yourself accordingly. Whether you're a beginner or an expert, there's a quiz for every skill level.
+    </li>
+    <li>
+        Competitive Gameplay: Compete against friends, family, or other players around the world. Earn high scores, climb the leaderboards, and prove your trivia prowess.
+    </li>
+    <li>
+        Engaging User Interface: Enjoy a visually appealing and user-friendly interface that enhances your quiz experience. Our intuitive design ensures seamless navigation and effortless gameplay.
+    </li>
+    <li>
+        Learn and Improve: Our quizzes are not only entertaining but also educational. Expand your knowledge, learn fascinating facts, and improve your understanding of various subjects.
+    </li>
+    <li>
+        Social Interaction: Connect with fellow quiz enthusiasts through our vibrant community. Share your achievements, discuss trivia topics, and participate in exciting challenges.
+    </li>
+    <li>
+        Regular Updates: We continuously add new quizzes and update existing ones to keep the content fresh and engaging. Stay tuned for the latest additions and special themed quizzes.
+    </li>
+</ul>
+        </div>
+
+        <div>
+            Join us on this thrilling journey of knowledge and entertainment. Play our quiz games, challenge yourself, and have a great time while expanding your horizons. Start playing now and let the fun begin!
+
+        </div>
     </div>
     
 </body>
