--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div>
+        <img src="./triangle1.png" alt="Image Not Found" class="img img1">
+    </div>
     <!-- HEADER -->
     <header>
         <div class="logo">
@@ -22,11 +25,11 @@
             <ul type="none">
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="./About/about.html">ABOUT</a></li>
-                <li><a href="#">HELP</a></li>
+                <li><a href="./Help/help.html">HELP</a></li>
             </ul>
         </div>
         <div class="contactUs">
-            <button>Contact Us</button>
+            <button><a href="./ContactUs/contactUs.html">Contact Us</a></button>
         </div>
     </header>
 
@@ -40,28 +43,25 @@
         <div class="main-left">
             <p class="grey-shade">EXPLORE YOURSELF</p>
             <p class="bold-white">Find Your </p><p class="bold-white big-bold-white">Errors</p> <p class="bold-white">and Improve...</p>
-            <div class="button">
-                <a href="./Coding/coding.html">CODING</a>
-            </div>
-            <div class="button">
-                <a href="./English/english.html">ENGLISH</a>
-            </div>
-            <div class="button">
-                <a href="#">OTHER</a>
-            </div>
+            
         </div>
         <div class="main-right">
-            <div class="photo-1">
+            <div class="photo-1 flexie">
+                <a href="coding.html">CODING</a>
                 <!-- <img src="./Images/18915856.jpg" alt=""> -->
             </div>
-            <div class="photo-2">
-
+            <div class="photo-2 flexie">
+                <a href="english.html">ENGLISH</a>
             </div>
-            <div class="photo-3">
-
+            <div class="photo-3 flexie">
+                <a href="#">OTHER</a>   
             </div>
 
         </div>
+    </div>
+
+    <div class="hr">
+        <hr>
     </div>
 
 
