--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <a href="english.html">ENGLISH</a>
             </div>
             <div class="photo-3 flexie">
-                <a href="#">OTHER</a>   
+                <a href="other.html">OTHER</a>   
             </div>
 
         </div>
