--- a/other.html
+++ b/other.html
@@ -56,7 +56,7 @@
 			<button class="next">Next</button>
 		</div>
 	</div>
-	<script src="coding.js"></script>
+	<script src="other.js"></script>
 
     <script>
         const img1 = document.querySelector('.img1');
